<resources>
    <string name="app_name">MealAtlas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_meal_of_the_day">Meal of the Day</string>
    <string name="str_view_all"><![CDATA[View all >]]></string>
    <string name="str_categories">Categories</string>
    <string name="str_countries">Countries</string>
    <string name="str_meal_title">Title</string>
    <string name="str_meal_category">Category</string>
    <string name="str_meal_area">Area</string>
    <string name="str_meal_instructions">Instructions</string>
    <string name="str_text_view">Loading ..</string>
    <string name="str_ingredients">Ingredients</string>
    <string name="str_view_meal">View Meal</string>
    <string name="str_desc">Discreption</string>
    <string name="str_view"><![CDATA[View >]]></string>
    <string name="str_youtube">Youtube</string>
    <string name="str_search_meal">Search By Meal</string>
    <string name="str_guest">Guest</string>
    <string name="str_login">Log in</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_username">Enter your username here</string>
    <string name="str_email">Enter your email here</string>
    <string name="str_password">Enter your password here</string>
    <string name="str_logout">Log out</string>
    <string name="client_id">624517895577-6j6j7gb70e2bqna77ejggpa0cmusfv15.apps.googleusercontent.com</string>
    <string name="str_add_to_favorite">Add to Favorite</string>
    <string name="str_favorite_meals">Favorite Meals:</string>
    <string name="str_remove_from_favorites">Remove from Favorites</string>
    <string name="str_add_to_plan">Add to Plan</string>
    <string name="str_remove">Remove</string>
    <string name="str_login_first" >Register First!</string>
    <string name="str_register">Register</string>
    <string name="str_welcome">Welcome to MealAtlas</string>
    <string name="str_skip">Skip</string>
    <string name="str_signin_google">Sign in with Google</string>
    <string name="str_first_time">Your First Time?</string>
    <string name="str_choose_the_filter">Choose the Filter</string>
</resources>