<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.welcomescreen.WelcomeFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/str_welcome"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/atlas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_to_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_sign_up" />

    <Button
        android:id="@+id/btn_to_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/str_sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/str_skip"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_login"
        app:layout_constraintStart_toStartOf="@+id/btn_to_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_login" />
</androidx.constraintlayout.widget.ConstraintLayout>