<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.searchscreen.view.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:paddingHorizontal="8dp"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_categories" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_areas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/str_countries" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ingredients" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_margin="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>